// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1 1`] = `
<div>
  <h1
    class="srOnly"
  >
    Test
  </h1>
</div>
`;

exports[`matches snapshot 2 1`] = `
<div>
  <h2
    class="srOnly"
  >
    Test
  </h2>
</div>
`;

exports[`matches snapshot 3 1`] = `
<div>
  <span
    class="srOnly testClass"
  >
    Test
  </span>
</div>
`;
